feat: 重构lamp-util
1. 依赖升级
    spring-cloud-dependencies.version>2021.0.2
    spring.boot.version>2.6.8
    spring-boot-admin.version>2.6.7
    hutool.version>5.8.1
    fastjson.version>1.2.83
    antisamy.version>1.6.7
2. 废弃lamp-security-starter
3. 配置中的lamp前缀改成使用常量