@@ -46,7 +46,7 @@ public class DozerUtils {
     public <T> T map2(Object source, Class<T> destinationClass) {
         if (source == null) {
             try {
-                return destinationClass.newInstance();
+                return destinationClass.getDeclaredConstructor().newInstance();
             } catch (Exception ignored) {
             }
         }
